--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+:root{
+    font-size: 16px;
+}
+
 html, body{
     padding: 0;
     margin: 0;
@@ -15,7 +19,7 @@ body{
 }
 
 .container{
-    width: 450px;
+    max-width: 600px;
     margin: 50px auto 0;
     background-color: #6CD4FF;
     min-height: 500px;
@@ -59,14 +63,18 @@ header h1 {
 }
 
 .new-task button {
+    background-color: #007bff;
+}
+
+.btn {
     border: 1px solid transparent;
     padding: .375rem .75rem;
-    font-size: 1rem;
-    line-height: 1.5;
+    font-size: 18px;
+    line-height: 1;
     border-radius: .25rem;
-    background-color: #007bff;
     color: #ffffff;
     cursor: pointer;
+    margin: 0 5px;
 }
 
 .new-task button:hover {
@@ -85,10 +93,64 @@ header h1 {
     background-color: #3E92CC;
     color: #ffffff;
     margin: 10px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .task-date {
     display: block;
     font-size: 10px;
     padding-top: 10px;
+}
+
+.task.done {
+    background-color: #444;
+    opacity: .7;
+}
+
+.remove-btn {
+    background-color: #dc3545;
+}
+.tick-btn {
+    background-color: #1e7e34;
+}
+.hide {
+    display: none;
+}
+
+.icon {
+    position: relative;
+    width: 1em;
+    height: 1em;
+    display: inline-block;
+}
+
+.icon::before,
+.icon::after {
+     content: "";
+     position: absolute;
+     background-color: white;
+}
+
+.plus-icon::before{
+     top: 0;
+     left: 50%;
+     width: 4px;
+     height: 100%;
+     margin-left: -2px;
+ }
+.plus-icon::after, .minus-icon::after{
+     top: 50%;
+     left: 0;
+     width: 100%;
+     height: 4px;
+     margin-top: -2px;
+}
+.tick-icon::after {
+    content: "\2713";
+    background: transparent;
+    position: static;
+    margin-left: -9px;
+    font-size: 1.25em;
 }
